fix: Added basic support for Operations
Still plenty of errors, but Operations are now appearing in the AsyncAPI v3 output.