@@ -25,6 +25,8 @@ import java.util.stream.Collectors;
 import static java.util.stream.Collectors.groupingBy;
 
 class AsyncAnnotationScannerUtil {
+    private AsyncAnnotationScannerUtil() {}
+
     public static AsyncHeaders getAsyncHeaders(AsyncOperation op, StringValueResolver resolver) {
         if (op.headers().values().length == 0) {
             return AsyncHeaders.NOT_DOCUMENTED;
@@ -61,7 +63,7 @@ class AsyncAnnotationScannerUtil {
                 .map(AsyncOperation.Headers.Header::value)
                 .map(resolver::resolveStringValue)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static String getDescription(List<AsyncOperation.Headers.Header> value, StringValueResolver resolver) {
@@ -126,7 +128,7 @@ class AsyncAnnotationScannerUtil {
     }
 
     /**
-     * extracts servers array from the given AsyncOperation, resolves placeholdes with spring variables and
+     * extracts servers array from the given AsyncOperation, resolves placeholders with spring variables and
      * return a List of server names.
      *
      * @param op       the given AsyncOperation
