@@ -27,7 +27,7 @@ class ChannelMergerTest {
         ChannelObject subscriberChannel = ChannelObject.builder().build();
 
         // when
-        Map<String, ChannelObject> mergedChannels = ChannelMerger.merge(
+        Map<String, ChannelObject> mergedChannels = ChannelMerger.mergeChannels(
                 Arrays.asList(Map.entry(channelName1, publisherChannel), Map.entry(channelName2, subscriberChannel)));
 
         // then
@@ -35,9 +35,40 @@ class ChannelMergerTest {
     }
 
     @Test
-    void shouldMergePublisherAndSubscriberIntoOneChannel() {
+    void shouldNotMergeDifferentOperationNames() {
+        // given
+        String operationName1 = "operation1";
+        String operationName2 = "operation2";
+        Operation publisherOperation = Operation.builder().build();
+        Operation subscriberOperation = Operation.builder().build();
+
+        // when
+        Map<String, Operation> mergedOperations = ChannelMerger.mergeOperations(Arrays.asList(
+                Map.entry(operationName1, publisherOperation), Map.entry(operationName2, subscriberOperation)));
+
+        // then
+        assertThat(mergedOperations).hasSize(2);
+    }
+
+    @Test
+    void shouldMergeEqualChannelNamesIntoOneChannel() {
         // given
         String channelName = "channel";
+        ChannelObject publisherChannel = ChannelObject.builder().build();
+        ChannelObject subscriberChannel = ChannelObject.builder().build();
+
+        // when
+        Map<String, ChannelObject> mergedChannels = ChannelMerger.mergeChannels(
+                Arrays.asList(Map.entry(channelName, publisherChannel), Map.entry(channelName, subscriberChannel)));
+
+        // then
+        assertThat(mergedChannels).hasSize(1);
+    }
+
+    @Test
+    void shouldMergeEqualOperationNamesIntoOneOperation() {
+        // given
+        String operationName = "operation";
         Operation publishOperation = Operation.builder()
                 .action(OperationAction.SEND)
                 .title("publisher")
@@ -46,48 +77,51 @@ class ChannelMergerTest {
                 .action(OperationAction.RECEIVE)
                 .title("subscribe")
                 .build();
-        ChannelObject publisherChannel = ChannelObject.builder().build();
-        ChannelObject subscriberChannel = ChannelObject.builder().build();
 
         // when
-        Map<String, ChannelObject> mergedChannels = ChannelMerger.merge(
-                Arrays.asList(Map.entry(channelName, publisherChannel), Map.entry(channelName, subscriberChannel)));
+        Map<String, Operation> mergedOperations = ChannelMerger.mergeOperations(Arrays.asList(
+                Map.entry(operationName, publishOperation), Map.entry(operationName, subscribeOperation)));
 
         // then
-        assertThat(mergedChannels).hasSize(1);
-        //        FIXME
-        //                .hasEntrySatisfying(channelName, it -> {
-        //            assertThat(it.getPublish()).isEqualTo(publishOperation);
-        //            assertThat(it.getSubscribe()).isEqualTo(subscribeOperation);
-        //        });
+        assertThat(mergedOperations).hasSize(1);
+    }
+
+    @Test
+    void shouldUseFirstChannelFound() {
+        // given
+        String channelName = "channel";
+        ChannelObject publisherChannel1 =
+                ChannelObject.builder().channelId("channel1").build();
+        ChannelObject publisherChannel2 =
+                ChannelObject.builder().channelId("channel2").build();
+
+        // when
+        Map<String, ChannelObject> mergedChannels = ChannelMerger.mergeChannels(
+                Arrays.asList(Map.entry(channelName, publisherChannel1), Map.entry(channelName, publisherChannel2)));
+
+        // then
+        assertThat(mergedChannels).hasSize(1).hasEntrySatisfying(channelName, it -> {
+            assertThat(it.getChannelId()).isEqualTo("channel1");
+        });
     }
 
     @Test
     void shouldUseFirstOperationFound() {
         // given
-        String channelName = "channel";
-        Operation publishOperation1 = Operation.builder()
-                .action(OperationAction.SEND)
-                .title("publisher1")
-                .build();
-        Operation publishOperation2 = Operation.builder()
-                .action(OperationAction.RECEIVE)
-                .title("publisher2")
-                .build();
-        ChannelObject publisherChannel1 = ChannelObject.builder().build();
-        ChannelObject publisherChannel2 = ChannelObject.builder().build();
+        String operationName = "operation";
+        Operation senderOperation =
+                Operation.builder().action(OperationAction.SEND).build();
+        Operation receiverOperation =
+                Operation.builder().action(OperationAction.RECEIVE).build();
 
         // when
-        Map<String, ChannelObject> mergedChannels = ChannelMerger.merge(
-                Arrays.asList(Map.entry(channelName, publisherChannel1), Map.entry(channelName, publisherChannel2)));
+        Map<String, Operation> mergedOperations = ChannelMerger.mergeOperations(
+                Arrays.asList(Map.entry(operationName, senderOperation), Map.entry(operationName, receiverOperation)));
 
         // then
-        assertThat(mergedChannels).hasSize(1);
-        //        FIXME
-        //                .hasEntrySatisfying(channelName, it -> {
-        //            assertThat(it.getPublish()).isEqualTo(publishOperation1);
-        //            assertThat(it.getSubscribe()).isNull();
-        //        });
+        assertThat(mergedOperations).hasSize(1).hasEntrySatisfying(operationName, it -> {
+            assertThat(it.getAction()).isEqualTo(OperationAction.SEND);
+        });
     }
 
     @Test
@@ -120,7 +154,7 @@ class ChannelMergerTest {
                 .build();
 
         // when
-        Map<String, ChannelObject> mergedChannels = ChannelMerger.merge(Arrays.asList(
+        Map<String, ChannelObject> mergedChannels = ChannelMerger.mergeChannels(Arrays.asList(
                 Map.entry(channelName, publisherChannel1),
                 Map.entry(channelName, publisherChannel2),
                 Map.entry(channelName, publisherChannel3)));
@@ -136,7 +170,7 @@ class ChannelMergerTest {
     @Test
     void shouldMergeDifferentMessageForSameOperation() {
         // given
-        String channelName = "channel";
+        String operationName = "operation";
         MessageObject message1 = MessageObject.builder()
                 .messageId("message1")
                 .name(String.class.getCanonicalName())
@@ -152,43 +186,37 @@ class ChannelMergerTest {
                 .name(Integer.class.getCanonicalName())
                 .description("This is also an integer, but in essence the same payload type")
                 .build();
-        Operation publishOperation1 = Operation.builder()
+        MessageReference messageRef1 = MessageReference.fromMessage(message1);
+        MessageReference messageRef2 = MessageReference.fromMessage(message2);
+        MessageReference messageRef3 = MessageReference.fromMessage(message3);
+
+        Operation senderOperation1 = Operation.builder()
                 .action(OperationAction.SEND)
-                .title("publisher1")
-                .messages(List.of(MessageReference.fromMessage(message1)))
+                .title("sender1")
+                .messages(List.of(messageRef1))
                 .build();
-        Operation publishOperation2 = Operation.builder()
+        Operation senderOperation2 = Operation.builder()
                 .action(OperationAction.SEND)
-                .title("publisher2")
-                .messages(List.of(MessageReference.fromMessage(message2)))
+                .title("sender2")
+                .messages(List.of(messageRef2))
                 .build();
-        Operation publishOperation3 = Operation.builder()
+        Operation senderOperation3 = Operation.builder()
                 .action(OperationAction.SEND)
-                .title("publisher3")
-                .messages(List.of(MessageReference.fromMessage(message3)))
+                .title("sender3")
+                .messages(List.of(messageRef3))
                 .build();
-        ChannelObject publisherChannel1 = ChannelObject.builder().build();
-        ChannelObject publisherChannel2 = ChannelObject.builder().build();
-        ChannelObject publisherChannel3 = ChannelObject.builder().build();
 
         // when
-        Map<String, ChannelObject> mergedChannels = ChannelMerger.merge(Arrays.asList(
-                Map.entry(channelName, publisherChannel1),
-                Map.entry(channelName, publisherChannel2),
-                Map.entry(channelName, publisherChannel3)));
+        Map<String, Operation> mergedOperations = ChannelMerger.mergeOperations(List.of(
+                Map.entry(operationName, senderOperation1),
+                Map.entry(operationName, senderOperation2),
+                Map.entry(operationName, senderOperation3)));
 
         // then expectedMessage only includes message1 and message2.
         // Message3 is not included as it is identical in terms of payload type (Message#name) to message 2
-        Object expectedMessages = MessageHelper.toMessagesMap(Set.of(message1, message2));
-        assertThat(mergedChannels).hasSize(1);
-        //                .hasEntrySatisfying(channelName, it -> {
-        //            assertThat(it.getPublish())
-        //                    .isEqualTo(Operation.builder()
-        //                            .operationId("publisher1")
-        //                            .message(expectedMessages)
-        //                            .build());
-        //            assertThat(it.getSubscribe()).isNull();
-        //        });
+        assertThat(mergedOperations).hasSize(1).hasEntrySatisfying(operationName, it -> {
+            assertThat(it.getMessages()).containsExactlyInAnyOrder(messageRef1, messageRef2);
+        });
     }
 
     @Test
@@ -215,11 +243,11 @@ class ChannelMergerTest {
                 ChannelObject.builder() /*.publish(publishOperation2)FIXME*/.build();
 
         // when
-        Map<String, ChannelObject> mergedChannels = ChannelMerger.merge(
+        Map<String, ChannelObject> mergedChannels = ChannelMerger.mergeChannels(
                 Arrays.asList(Map.entry(channelName, publisherChannel1), Map.entry(channelName, publisherChannel2)));
 
         // then expectedMessage message2
-        Object expectedMessages = MessageHelper.toMessagesMap(Set.of(message2));
+        var expectedMessages = MessageHelper.toMessagesMap(Set.of(message2));
         assertThat(mergedChannels).hasSize(1).hasEntrySatisfying(channelName, it -> {
             //            assertThat(it.getPublish()) FIXME
             //                    .isEqualTo(Operation.builder()
